--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     ports:
       - "5432:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
       interval: 10s
       timeout: 5s
       retries: 20
@@ -38,6 +38,21 @@ services:
         source: app
         target: /go/pkg/mod
 
+  frontend:
+    build:
+      context: ./frontend/my-app
+      dockerfile: Dockerfile
+    command: "npm run dev"
+    ports:
+      - "3001:3000"
+
+    # Todo:frontendにもdepends_on app:を付ける
+    volumes:
+      - type: bind
+        source: ./frontend/my-app
+        target: /app
+
 volumes:
   db_data:
   app:
+  frontend:
